# es-vocab

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml
.github/workflows/: documentation.yml  main.yml
DD_creation_example/: index.html
cicd/: Dockerfile  check_for_update.sh  common.sh  compose.yaml  update_deployment_scripts.sh  update_docker_container.sh  update_documentation.sh
documentation/: mkdocs.yml
documentation/docs/: DD_creation_example.md  api_basics.html  index.md  restapi.md  restapi_py.md  sparqlendpoint.md  website.md
restapi/: index.html
search/: search_index.json
sparqlendpoint/: index.html
src/es_vocab/: bootstrap.py  server.py
src/es_vocab/api/: __init__.py  db.py  sparql.py  urls.py  webhook.py
src/es_vocab/apps/: validation.py
src/es_vocab/apps/drs/: drs.py  models.py  project_specs.py
src/es_vocab/db/: concurrency.py  cvs.py  json_search.py  json_sqlite.py  model.py  parser.py
src/es_vocab/utils/: bootstrap.py  constants.py  naming.py  server.py  settings.py
tests/: test_cvs.py  test_parser.py  test_validation.py
website/: index.html
